--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DB_HOST = mongodb+srv://vuavso16:CqZwf42Y4J2bO4h3@cluster0.14gce.mongodb.net/telephonebook?retryWrites=true&w=majority;
+SECRET_KEY = gfdghjfgdfghgfdghgffdsz;
 
 
