--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DB_HOST = mongodb+srv://vuavso16:CqZwf42Y4J2bO4h3@cluster0.14gce.mongodb.net/telephonebook?retryWrites=true&w=majority;
 SECRET_KEY = gfdghjfgdfghgfdghgffdsz;
+SENDGRID_API_KEY = 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;
 
 
